// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiPage renders 1`] = `
<DocumentFragment>
  .emotion-4 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
  line-height: 1.5;
  color: var(--theme-ui-colors-text,#232323);
  background-color: var(--theme-ui-colors-background,#fff);
  font-size: 14px;
}

@media screen and (min-width:46.25em) {
  .emotion-4 {
    font-size: 16px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  max-width: 1400px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 0;
}

@media screen and (min-width:46.25em) {
  .emotion-3 {
    padding-top: 0;
  }
}

.emotion-2 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: var(--theme-ui-colors-background,#fff);
  padding-top: 16px;
  padding-bottom: 16px;
}

@media screen and (min-width:46.25em) {
  .emotion-2 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

.emotion-1 {
  display: block;
  width: 100%;
}

@media screen and (min-width:46.25em) {
  .emotion-1 {
    display: inline-block;
    width: 50%;
  }
}

.emotion-0 {
  width: 100%;
  font-size: 16px;
}

@media screen and (min-width:46.25em) {
  .emotion-0 {
    font-size: 24px;
  }
}

<div
    class="emotion-4"
  >
    <div
      class="emotion-3"
    >
      <header
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-reach-combobox=""
        >
          <input
            aria-autocomplete="both"
            aria-controls="listbox--1"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Pages"
            class="emotion-0"
            data-reach-combobox-input=""
            placeholder="Search Wikipedia"
            role="combobox"
            value=""
          />
        </div>
      </header>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WikiPage renders with a page title 1`] = `
<DocumentFragment>
  .emotion-4 {
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
  line-height: 1.5;
  color: var(--theme-ui-colors-text,#232323);
  background-color: var(--theme-ui-colors-background,#fff);
  font-size: 14px;
}

@media screen and (min-width:46.25em) {
  .emotion-4 {
    font-size: 16px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  max-width: 1400px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 0;
}

@media screen and (min-width:46.25em) {
  .emotion-3 {
    padding-top: 0;
  }
}

.emotion-2 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: var(--theme-ui-colors-background,#fff);
  padding-top: 16px;
  padding-bottom: 16px;
}

@media screen and (min-width:46.25em) {
  .emotion-2 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
}

.emotion-1 {
  display: block;
  width: 100%;
}

@media screen and (min-width:46.25em) {
  .emotion-1 {
    display: inline-block;
    width: 50%;
  }
}

.emotion-0 {
  width: 100%;
  font-size: 16px;
}

@media screen and (min-width:46.25em) {
  .emotion-0 {
    font-size: 24px;
  }
}

<div
    class="emotion-4"
  >
    <div
      class="emotion-3"
    >
      <header
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-reach-combobox=""
        >
          <input
            aria-autocomplete="both"
            aria-controls="listbox--3"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Pages"
            class="emotion-0"
            data-reach-combobox-input=""
            placeholder="Search Wikipedia"
            role="combobox"
            value=""
          />
        </div>
      </header>
      <main />
    </div>
  </div>
</DocumentFragment>
`;
